--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Song App for ToopLoox</string>
+    <string name="app_name">Song app for ToopLoox</string>
+    <string name="search_hint">Search by: song name, artist, year</string>
+    <string name="song_name">Song name</string>
+    <string name="artist">Artist:</string>
+    <string name="release_year">Release year:</string>
+    <string name="empty_list">Nothing here&#8230;</string>
 </resources>
