--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Song app for ToopLoox</string>
-    <string name="search_hint">Search by: song name, artist, year</string>
-    <string name="song_name">Song name</string>
+    <string name="search_hint">Search by: song title, artist, year</string>
+    <string name="song_name">Song title</string>
     <string name="artist">Artist:</string>
     <string name="release_year">Release year:</string>
     <string name="empty_list">Nothing here&#8230;</string>
