--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,10 @@
     <string name="search_hint">Search by: song title, artist, year</string>
     <string name="song_name">Song title</string>
     <string name="artist">Artist:</string>
-    <string name="release_year">Release year:</string>
+    <string name="release_year">Release date:</string>
     <string name="empty_list">Nothing here&#8230;</string>
-    <string name="welcome_msg"><b>Welcome!</b>\n\nNavigate <i>left</i> to choose <i>remote</i> source.\n\nNavigate <i>right</i> to choose <i>local</i> source.</string>
+    <string name="welcome_msg"><b>Welcome!</b>\n\n\nNavigate <i>left</i> to choose <i>iTunes</i> source.\n\nNavigate <i>right</i> to choose <i>local</i> source.</string>
     <string name="remote">Remote</string>
     <string name="local">Local</string>
-    <string name="titleFilter">Title</string>
-    <string name="artistFilter">Artist</string>
-    <string name="yearFilter">Release year</string>
-    <string name="empty_msg">To search please type a song title, artist or release year</string>
+    <string name="empty_msg">No results.\nPlease type a song title, artist or release year.</string>
 </resources>
